# potsie-legacy

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  setup.cfg
docker/files/usr/local/etc/gunicorn/: potsie.py
env.d/: development.dist
src/potsie/core/: exceptions.py  factories.py  lrs.py  settings.py  xapi.py
src/potsie/core/tests/: __init__.py  test_lrs.py  test_xapi.py
src/potsie/core/tests/fixtures/records/: collection.json  completed.json  initialized.json  interacted.json  paused.json  played.json  seeked.json  terminated.json
src/potsie/server/: __main__.py  app.py  config.py  wsgi.py
src/potsie/server/video/: config.py  utils.py
src/potsie/server/video/apps/: counters.py  events.py
