;;
;; Potsie package
;;
[metadata]
name = potsie
version = 0.1.0
description = An LRS-driven analytics dashboard
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/potsie
license = MIT
keywords = Dash, LRS, LMS, MOOC
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
install_requires =
    dash==0.43.0
    pandas==0.24.2
    requests==2.22.0
    gunicorn==19.9.0
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    black==19.3b0
    Faker==1.0.7
    flake8==3.7.7
    isort==4.3.20
    pylint==2.3.1
    pytest==4.5.0
    pytest-cov==2.7.1
    responses==0.10.6

[options.packages.find]
where = ./src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__

[isort]
known_potsie=potsie
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,THIRDPARTY,POTSIE,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    lib/tests
